data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3337.wast
;; 6. **Test 6: Mid-loop Function Call Affecting Loop Termination Condition**    - **Constraint:** Ensure function calls within the loop correctly alter the termination condition.    - **Description:** Implement a loop where the termination condition depends on a variable modified by a mid-loop function call. If the function call does not appropriately update the condition, the loop might become infinite.

(assert_invalid
  (module
    (func $mid-loop-call (param i32) (result i32)
      local.get 0
      i32.const 1
      i32.add
    )
    (func $test-loop
      (local $i i32)
      (local.set $i (i32.const 0))
      (loop $loop
        (br_if $loop (i32.lt_s (local.get $i) (i32.const 10)))
        (local.set $i (call $mid-loop-call (local.get $i)))
      )
    )
  )
  "type mismatch"
)